...
                    </view>
                    <navigationItem key="navigationItem" title="Chat" id="eCj-HO-lyc"/>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="customNavigationBar" destination="nc4-BG-DHg" id="fGN-fX-GSc"/>
                        <outlet property="searchBar" destination="gXF-8t-dm8" id="HZR-4P-yyF"/>
                        <outlet property="tblConversation" destination="Eof-tD-Yts" id="2XK-7R-jWa"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2671.1999999999998" y="1198.5221674876848"/>
        </scene>
...
            <point key="canvasLocation" x="-2295.1999999999998" y="1942.6108374384237"/>
        </scene>
        <!--Teams-->
        <scene sceneID="QnK-yT-1od">
            <objects>
                <navigationController navigationBarHidden="YES" id="UaT-c8-AOa" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Teams" image="person.3" catalog="system" id="4nt-47-bmx"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="1kk-j2-vSp">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="SnH-nO-4Ng" kind="relationship" relationship="rootViewController" id="ewf-UD-Tte"/>
                    </connections>
...
            <point key="canvasLocation" x="-1304" y="-271"/>
        </scene>
        <!--Chats-->
        <scene sceneID="9nP-IQ-ibj">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" toolbarHidden="NO" id="zfi-bl-g7a" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Chats" image="ellipsis.message.fill" catalog="system" badgeValue="5" id="584-Lb-hlN"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r06-Gu-ocG">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <navigationBarAppearance key="standardAppearance"/>
                        <navigationBarAppearance key="scrollEdgeAppearance"/>
...
            <point key="canvasLocation" x="-3410" y="1196"/>
        </scene>
        <!--Activity-->
        <scene sceneID="IG2-52-rul">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" navigationBarHidden="YES" toolbarHidden="NO" id="Egk-uY-dSp" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Activity" image="bell" catalog="system" id="XU8-8S-buJ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="lfe-7c-iw0">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bHL-oa-HR6">
...
                        <constraints>
                            <constraint firstItem="Rq3-v4-aOJ" firstAttribute="leading" secondItem="89z-XF-WyM" secondAttribute="leading" id="70i-bj-RwS"/>
                            <constraint firstItem="Rq3-v4-aOJ" firstAttribute="top" secondItem="hLB-Xr-rNa" secondAttribute="bottom" id="hnu-3l-sea"/>
                            <constraint firstAttribute="trailing" secondItem="Rq3-v4-aOJ" secondAttribute="trailing" id="vUs-3g-R3d"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Calls" id="0G8-pW-wd9"/>
                    <connections>
                        <outlet property="customNavBar" destination="Rq3-v4-aOJ" id="xNt-80-O4x"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iNV-vP-AUP" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-361" y="1198"/>
        </scene>
        <!--More-->
        <scene sceneID="JvD-oc-2h3">
            <objects>
                <navigationController navigationBarHidden="YES" id="pWr-Nb-az7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="More" image="line.horizontal.3" catalog="system" id="zes-eS-yZA"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zbK-nZ-Fiq">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="zdu-vX-rZa" kind="relationship" relationship="rootViewController" id="QFN-HB-NYU"/>
                    </connections>
...
            <point key="canvasLocation" x="-1138" y="1196"/>
        </scene>
        <!--Calendar-->
        <scene sceneID="goU-P1-vvY">
            <objects>
                <navigationController extendedLayoutIncludesOpaqueBars="YES" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="7TD-Gg-W5w" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar" catalog="system" id="SXW-IA-wzH">
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FSE-KW-3sC">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
...
